# qt-img-viewer

./: CMakeLists.txt  README.md  main.cpp
